# learn_c

./: CMakeLists.txt  README.md
src/: test.c
src/02/: README.md
src/02/demo/: celsius.c  dweight  dweight.c  dweight2  dweight2.c  pun  pun.c
src/02/project/01/: 1.c
src/02/project/02/: 2.c
src/02/project/03/: 3.c
src/02/project/04/: 4.c
src/02/project/05/: 5.c
src/02/project/06/: 6.c
src/02/project/07/: 7.c
src/02/project/08/: 8.c
src/03/demo/: addfrac.c  tprintf  tprintf.c
src/03/exercise/: 01.md  02.md
src/03/project/01/: 1  1.c
src/03/project/02/: 2  2.c
src/03/project/03/: 3.c
src/03/project/05/: 5.c
src/03/project/06/: 6  6.c
src/04/: README.md
src/04/demo/: upc.c
src/04/project/01/: 1  1.c
src/04/project/02/: 2  2.c
src/04/project/03/: 3  3.c
src/04/project/05/: 5.c
src/05/demo/: broker.c  date.c
src/05/project/01/: 1.c
src/05/project/02/: 2.c
src/05/project/09/: 9.c
src/06/demo/: numdigit.c  square.c  sum.c
src/06/project/01/: 1.c
src/06/project/11/: e  e.c
src/07/: README.md
src/07/demo/: length.c  length2.c  sum2.c
src/07/project/01/: square.c
src/07/project/04/: 4.c
src/07/project/05/: 5.c
src/07/project/07/: 7.c
src/07/project/10/: 10.c
src/07/project/11/: 11.c
src/08/: README.md
src/08/demo/: fibonacci.c  interest.c  repdigit.c  reverse.c  reverse2.c
src/08/project/01/: 1.c
src/09/: README.md
src/09/demo/: average.c  countdown.c  prime.c  pun2.c  qsort.c
src/10/: README.md
src/10/demo/: guess.c  guess2.c  stack.c
src/11/: README.md
src/11/demo/: maxmin.c  reverse3.c
src/11/exercise/: README.md  remove_file_name.c
src/13/: README.md
src/13/demo/: planet.c  remind.c
src/13/exercise/: README.md
src/14/: README.md
src/14/exercise/: README.md
src/15/: README.md
src/15/demo/: justify  justify.c  line.c  line.h  word.c  word.h
src/16/: README.md
src/16/demo/: inventory.c
src/16/exercise/: README.md
src/17/: README.md
src/17/demo/: inventory2.c  linkedlist.c  linkedlist.h  readline.c  readline.h  remind2.c  tabulate.c
src/17/exercise/: README.md
src/18/: README.md
src/18/exercise/: README.md
src/19/: README.md
src/19/exercise/: README.md  array_queue.c  array_stack.c  linked_queue.c  queue.h  queueclient.c  stack.h
src/20/: README.md
src/20/demo/: viewmemory.c  xor.c
src/20/exercise/: README.md  swap_bytes.c  t.c
src/20/project/: f.c
src/21/: README.md
src/21/project/: 1.c
src/22/: README.md
src/22/demo/: canopen.c  fcopy.c
src/24/: README.md
src/24/demo/: tsignal.c
(+29 files in other folders)
