cmake_minimum_required(VERSION 3.19)
project(learn_c C)

set(CMAKE_C_STANDARD 11)

add_executable(test src/test.c)
add_executable(square src/07/project/01/square.c)
add_executable(3 src/07/project/04/4.c src/07/project/05/5.c src/07/project/07/7.c)
add_executable(10 src/07/project/10/10.c src/07/project/11/11.c src/08/demo/reverse.c src/08/demo/repdigit.c src/08/demo/interest.c src/08/demo/reverse2.c)
add_executable(fibonacci src/08/demo/fibonacci.c)
add_executable(1 src/21/project/1.c)
add_executable(2 src/11/project/02/2.c)
add_executable(6 src/10/project/06/6.c)
add_executable(countdown src/09/demo/countdown.c)
add_executable(pun2 src/09/demo/pun2.c)
add_executable(prime src/09/demo/prime.c)
add_executable(qsort src/09/demo/qsort.c)

add_executable(stack src/19/demo/stack/stack.c src/19/demo/stack/stack2.c)
add_executable(guess src/10/demo/guess.c)
add_executable(guess2 src/10/demo/guess2.c)

add_executable(maxmin src/11/demo/maxmin.c)
add_executable(reverse3 src/11/demo/reverse3.c)

add_executable(remind src/13/demo/remind.c)
add_executable(planet src/13/demo/planet.c)
add_executable(remove_file_name src/11/exercise/remove_file_name.c)

add_executable(sum src/13/project/5/sum.c)
add_executable(18 src/13/project/18/18.c)
add_executable(justify src/15/demo/justify.c src/15/demo/word.c src/15/demo/line.c)
add_executable(inventory src/16/demo/inventory.c src/16/demo/readline.c)

add_executable(remind2 src/17/demo/remind2.c)
add_executable(linkedlist src/17/demo/linkedlist.c src/17/demo/linkedlist.h)
add_executable(inventory2 src/17/demo/inventory2.c src/17/demo/readline.c)
add_executable(tabulate src/17/demo/tabulate.c)

add_executable(stackADT src/19/demo/stackADT/stackclient.c src/19/demo/stackADT/stackADT.c)
add_executable(stackADT2 src/19/demo/stackADT2/stackADT2.c)
add_executable(stackADT3 src/19/demo/stackADT3/stackADT3.c)
add_executable(linked_queue src/19/exercise/linked_queue.c)
add_executable(array_queuq src/19/exercise/queueclient.c src/19/exercise/array_queue.c)
add_executable(array_stack src/19/exercise/array_stack.c src/19/exercise/stack.h)
add_executable(xor src/20/demo/xor.c)
add_executable(viewmemory src/20/demo/viewmemory.c)
add_executable(t src/20/exercise/t.c)
add_executable(swap_bytes src/20/exercise/swap_bytes.c)
add_executable(f src/20/project/f.c)

add_executable(canopen src/22/demo/canopen.c)
add_executable(fcopy src/22/demo/fcopy.c)
add_executable(tsignal src/24/demo/tsignal.c)